# big-shared

./: CMakeLists.txt  README.md  README.rst
app/foo/c/: CMakeLists.txt  main.cpp
lib/foo/: CMakeLists.txt
lib/foo/a/: A.cpp  A.hpp  CMakeLists.txt
lib/foo/all/: CMakeLists.txt  all.cpp  all.hpp
lib/foo/b/: B.cpp  B.hpp  CMakeLists.txt
